added full specification to openapi.yml
updated delete_user to
catch existing user exception
