# flaskapi/openapi.yml
@@ -1,7 +1,17 @@
-openapi: 3.0.0
+# defined as per 
+# https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.0.0.md#definitions
+openapi: 3.0.1
 info:
-  title: API Key Example
-  version: '1.0'
+  title: flaskapi boilerplate
+  description: A sample flask RESTful boilerplate using connexion
+  contact:
+    name: Martin Gran
+    url: www.github.com/martgra/flaskapi
+    email: martgra@gmail.com
+  license:
+    name: Apache 2.0 
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  version: '1.1'
 paths:
   /secret:
     get:
@@ -10,42 +20,43 @@ paths:
       tags:
         - User
       responses:
-        '200':
+        200:
           description: secret response
           content:
-            '*/*':
+            'text/plain':
               schema:
                 type: string
+                example: "You are {user} and the secret is 'wbevuec'"
       security:
         - api_key: []
-  '/user/{user_id}':
+  /user/{user_id}:
     get:
       summary: Return user
       operationId: flaskapi.api.resources.user.get_user
       tags:
         - User
-      responses:
-        '200':
-          description: user info
-          content:
-            '*/*':
-              schema:
-                type: string
       parameters:
-        - name: user_id
-          in: path
-          schema:
-            type: string
+        - $ref: "#/components/parameters/UserID"
+      responses:
+        200:
+          description: user info of one user
+          content:
+            'application/json':
+              schema:
+                type: object
+                properties:
+                  user:
+                    $ref: "#/components/schemas/User"
+        404:
+          description: user does not exists
+
     put:
       summary: Update user
       operationId: flaskapi.api.resources.user.update_user
       tags:
         - User
       parameters:
-        - in: path
-          name: user_id
-          schema:
-            type: integer
+        - $ref: "#/components/parameters/UserID"
       requestBody:
         content:
           application/json:
@@ -53,24 +64,29 @@ paths:
               $ref: "#/components/schemas/User"
       responses:
         200:
-          description: user info
+          description: Updated user info
           content:
-            '*/*':
+            'application/json':
               schema:
-                type: string
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: user updated
+                  user:
+                    $ref: "#/components/schemas/User"
+        404:
+          description: user does not exists
     delete:
       summary: Delete user
       operationId: flaskapi.api.resources.user.delete_user
       tags:
         - User
       parameters:
-        - in: path
-          name: user_id
-          schema:
-            type: integer
+        - $ref: "#/components/parameters/UserID"
       responses:
         200:
-          description: delete user
+          description: User deleted confirmation
           content:
             application/json:
               schema:
@@ -89,14 +105,17 @@ paths:
       tags:
         - User
       responses:
-        '200':
-          description: all registered users
+        200:
+          description: All registered users
           content:
             'application/json':
               schema:
                 type: object
                 properties:
-                  results:
+                  message:
+                    type: string
+                    example: List of users
+                  users:
                     type: array
                     items:
                       $ref: '#/components/schemas/User'
@@ -115,10 +134,25 @@ paths:
         201:
           description: Sucessfully created user
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-
+                type: object
+                properties:
+                  message: 
+                    type: string
+                    example: user created
+                  user:
+                    $ref: "#/components/schemas/User"
+        409:
+          description: User with identical username of email details already exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: username already exist
 components:
   securitySchemes:
     api_key:
@@ -128,6 +162,7 @@ components:
       x-apikeyInfoFunc: flaskapi.auth.api_key.auth
   schemas:
     User:
+      type: object
       properties:
         username:
           type: string
@@ -138,3 +173,15 @@ components:
         password:
           type: string
           example: "123"
+  parameters:
+    UserID:
+      name: user_id
+      in: path
+      description: Unique identifier of user
+      required: true
+      schema:
+        type: integer
+        example: 1
+servers:
+# Currently not supported with Connexion. Issue https://github.com/zalando/connexion/issues/1139
+  - url: http://localhost:5000/
